--- a/src/component/Backpack/css/Backpack.css
+++ b/src/component/Backpack/css/Backpack.css
@@ -68,8 +68,8 @@
     justify-content: space-around;
     text-align: center;
     font-size: 5.5vh;
+    font-weight: 500;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-weight: 300;
 }
 .BackpackCardImage {
     position: relative;
@@ -122,6 +122,7 @@
     text-align: right;
     top:70%;
     transform: translate(-0.8vh,-100%);
+    background-color: rgba(255,255,255,50%);
 }
 
 #LeaveBackpack {
