--- a/src/component/Gotcha/css/gotcha.css
+++ b/src/component/Gotcha/css/gotcha.css
@@ -17,6 +17,9 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    background-image: url('../../img//backgroundGotcha.png');
+    background-repeat: no-repeat;
+    background-size: cover;
     padding: 10vh;
 }
 #GotchaUI {
@@ -34,6 +37,7 @@
     position: relative;
     width: 34vh;
     height: 19vh;
+    top:25vh;
     display: flex;
     flex-direction: row;
     border-radius: 3vh;
@@ -45,4 +49,10 @@
     top:50%;
     font-size: 3vh;
     transform: translate(0,-1.5vh);
+}
+
+.roll:hover{
+    background-color: gold;
+    transition: 800ms ;
+    transition-timing-function:ease-in-out;
 }
