--- a/src/component/HomePage/css/HomePage.css
+++ b/src/component/HomePage/css/HomePage.css
@@ -25,6 +25,9 @@
     width: 100%;
     height: 80%;
     margin: 0;
+    background-image: url('../../img/backgroundHomePage.png');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #HomePageUI {
@@ -46,6 +49,7 @@
     font-weight: 900;
     border-radius: 8vh;
     border: inset 1vh orange;
+    background-color: rgba(255,255,255,50%);
 }
 
 #Instruction{
@@ -58,4 +62,13 @@
     border-radius: 1vh;
     border: darkgray 1vh;
     border-style:outset;
+    font-weight: 350;
+    background-color:
+    rgba(255,255,255,50%);
+}
+
+#Instruction:hover{
+    background-color: white;
+    transition: 500ms;
+    transition-timing-function: ease-out;
 }
